image fix lat lon safari mobile

--- a/main.css
+++ b/main.css
@@ -32,8 +32,7 @@ body {
 }
 
 .image-section {
-    width: 100%;
-    height: 400px;
+    width: 100% !important;
     object-fit: scale-down;
 }
 
